--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="header" class="header">
-        <nav id="nav-bar" class="nav-bar">
+        <nav id="navbar" class="navbar">
             <ul class="nav-links">
                 <li class="nav-item"><a href="#welcome-section" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="#projects" class="nav-link">Work</a></li>
@@ -42,21 +42,23 @@
     <section id="contact" class="contact">
         <h2 class="contact-text">Want to contact me? Feel free to do so on any of these platforms:</h1>
         <div class="links-wrapper">
-            <a href="https://twitter.com/mrjoe94">
+            <a href="https://twitter.com/mrjoe94" target="_blank">
                 <i class="fa-brands fa-twitter-square fa-lg icon"></i>
             </a>
-            <a href="https://github.com/mrjoey94">
+            <a id="profile-link" href="https://github.com/mrjoey94" target="_blank">
                 <i class="fa-brands fa-github fa-lg icon"></i>
             </a>
 
-            <a href="mailto:joeymccluskey815@gmail.com">
+            <a href="mailto:joeymccluskey815@gmail.com" target="_blank">
                 <i class="fa-solid fa-envelope fa-lg icon"></i>
             </a>
         </div>
     </section>
-    <footer id="footer" class="footer">
-        <p class="footer-items"></p>
-    </footer>
+    <section id="footer">
+        <footer id="footer" class="footer">
+            <p class="footer-items"></p>
+        </footer>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
